<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="submitSuccess">Submit Success</string>
    <string name="pleaseInputData">Please Input Value!</string>
    <string name="importance">Importance</string>
    <string name="NoUpdate">\u0020No Update</string>
    <string name="update">\u0020Update</string>
    <string name="tryAgain">Try Again</string>
    <string name="warn">Warn:</string>
    <string name="DataNotEmpty">Data cannot be empty</string>
    <string name="Unsynchronized">Unsynchronized</string>
    <string name="SystemAnomaly">System Anomaly</string>
    <string name="ModifySuccess">Modify Success</string>
    <string name="second">second(s)</string>
    <string name="UploadFailed">Upload failed</string>
    <string name="Cancel">Cancel</string>
    <string name="qingshuruzhengque">Please enter the correct information</string>
    <string name="AccountNotEmpty">Account cannot be empty</string>
    <string name="AccountIncorrect">Account format is incorrect</string>
    <string name="PasswordNotEmpty">Password cannot be empty</string>
    <string name="ExitAgain">Log out if you click again</string>
    <string name="Login">Log in</string>
    <string name="Register">Sign up</string>
    <string name="ForgetPassword">Forgot Password</string>
    <string name="PleaseInputPhone">Input your phone or E-mail</string>
    <string name="PleaseInputPhone1">Input your E-mail or Mobile Phone</string>
    <string name="PleaseInputPassword">Input password</string>
    <string name="IncorrectCodeLength">Incorrect code length</string>
    <string name="VerificationEmpty">Verification code cannot be empty</string>
    <string name="PasswordLess">Password length shall not be less than 6 bits</string>
    <string name="TwoNotEqual">Two password input is not equal</string>
    <string name="VerificationSuccessfully">Verification code sent successfully</string>
    <string name="LoginSucceed">Login Succeed</string>
    <string name="UserExists">This user already exists</string>
    <string name="AuthenticationFailed">Authentication code failed to send</string>
    <string name="SentOutToday">The number of messages sent out today</string>
    <string name="VerificationExpired">Verification code expired</string>
    <string name="VerificationError">Verification code input error</string>
    <string name="GetCode">Get Code</string>
    <string name="UserNotRegisted">The user is not signed up</string>
    <string name="wangjimima">Forgot Password</string>
    <string name="qingyanzhengma">Input your code</string>
    <string name="tongyibingzunshou">Agree and comply with</string>
    <string name="xieyi">\u2000the software\'s agreement</string>
    <string name="qingshurumima">Input 6-16 password</string>
    <string name="yanzhengma">Code</string>
    <string name="shezhimima">Psw</string>
    <string name="querenmima">Confirm</string>
    <string name="app_name">Healthlocus</string>
    <string name="homeTitle">Intimate Doctor</string>
    <string name="left_myFriends">My Contacts</string>
    <string name="left_lookingForDoctors">Looking For Doctors</string>
    <string name="left_myHealthyData">My Health Data</string>
    <string name="left_doctorCertification">Doctor Certification</string>
    <string name="left_myHomePage">My Home Page</string>
    <string name="left_settings">Settings</string>
    <string name="left_sos">SOS</string>
    <string name="left_doctor">Dr.</string>
    <string name="home_heartRate">Heart Rate</string>
    <string name="home_bloodPressure">Blood Pressure</string>
    <string name="home_lungCapacity">Vital Capacity</string>
    <string name="home_tongue">Tongue Diagnosis</string>
    <string name="home_bloodSuger">Blood Glucose</string>
    <string name="home_sleep">Sleep Quality</string>
    <string name="home_bmi">Body Mass Index</string>
    <string name="home_temperature">Body Temperature</string>
    <string name="home_steps">Steps</string>
    <string name="home_testSheet">Test Report</string>
    <string name="edit">Edit</string>
    <string name="finish">Done</string>
    <string name="MyConcernedItems">My Concerned Items</string>
    <string name="RecommendedExaminationItems">Recommended Examination Items</string>
    <string name="heartRateCurve">Heart Rate Curve</string>
    <string name="heartRateValue">Heart Rate Value(times/min)</string>
    <string name="heartUnit">times/min</string>
    <string name="inputValue">Input Value</string>
    <string name="submit">Submit</string>
    <string name="PleaseEnterCorrectHeartRate">Please enter the correct heart rate</string>
    <string name="incorrectPosture">Incorrect Posture</string>
    <string name="rapidTestResults">Rapid Test Results</string>
    <string name="PleaseFlashlight">Please cover your camera with your fingertips and check the flashlight.</string>
    <string name="PleaseProcedure">The results of this procedure can not replace medical devices, but long-term measurements can reflect the condition of changes. </string>
    <string name="maximumPressure">Max Pressure</string>
    <string name="minimumPressure">Min Pressure</string>
    <string name="bloodPressureValue">Blood Pressure Value (mmHg)</string>
    <string name="highBloodPressureCurve">High Blood Pressure Curve</string>
    <string name="lowBloodPressureCurve">Low Blood Pressure Curve</string>
    <string name="bloodPressureMessage">   According to the standards of WHO, the adult normal blood pressure is 90/60 ~ 139/89, the ideal blood pressure lower than 120/80. The blood pressure value reach or more than 140/90 is high blood pressure, 130/85 is normal blood pressure or critical value. However, the blood pressure value is different in age and gender.</string>
    <string name="connectSmartBracelet">Search to Connect the Smart Bracelet</string>
    <string name="smartBracelet">Smart Bracelet</string>
    <string name="succeedBluetooth">Succeed in opening the Bluetooth</string>
    <string name="failedBluetooth">Failed in opening the Bluetooth</string>
    <string name="braceletStrength">Bracelet Strength</string>
    <string name="connectionDevice">Connection Device</string>
    <string name="searchingBracelet">Searching the Bracelet</string>
    <string name="searchedBracelet">Searched Bracelet</string>
    <string name="noSearchBracelet">There is No Bracelets</string>
    <string name="signalWeak">Signal Is Weak</string>
    <string name="signalStrong">Signal Is Strong</string>
    <string name="signalPoor">Signal Is Poor</string>
    <string name="connectingBracelet">Connecting the Bracelet</string>
    <string name="heartMessage">\u0020At rest state, the adult normal heart rate is 60 ~ 100 times/min, the ideal heart rate should be 55 ~ 70 times/min.</string>
    <string name="delicateAndSoft">Delicate and soft, lung capacity is an important index of the strength of lung function, we suggest you to increase usual aerobic exercise, and eat more fruits and vegetable for vitamin supplements.</string>
    <string name="LungNormal">Your lung capacity is normal, but in order to prolong life and give full play to the potential power of pulmonary function, we suggest you sticking to hold your head high waist straight, take the appropriate physical activity and do chest expansion action every day.</string>
    <string name="LungStrong">Your lung capacity is very strong, you are suitable for long-distance running and swimming</string>
    <string name="WowCongratulations">Wow! Congratulations, your lung capacity is super strong, you are a superman. </string>
    <string name="OhMyGod">Oh, my god! Please you accept the task of safeguarding peace in the universe!</string>
    <string name="startMeasuring">Start Measuring</string>
    <string name="lungCapacityValue">Lung Capacity Value</string>
    <string name="lungCapacityCurve">Lung Capacity Curve</string>
    <string name="pleaseTakeTongue">Please take a picture of your tongue</string>
    <string name="startDiagnosis">Start Diagnosis</string>
    <string name="diagnosising">Diagnosising, please wait...</string>
    <string name="diagnosticCompletion">Result</string>
    <string name="ToSayToYou">What the doctor wants to say to you:</string>
    <string name="diagnosticFailure">Diagnostic Failure</string>
    <string name="diagnosisAgain">Diagnosis Again</string>
    <string name="diagnosisResult">Diagnosis Result:</string>
    <string name="TotalSleepQuality">Total Sleep</string>
    <string name="DeepSleepTime">Deep Sleep</string>
    <string name="LightSleepTime">Light Sleep</string>
    <string name="Excellent">Excellent</string>
    <string name="Good">Good</string>
    <string name="Poor">Poor</string>
    <string name="Empty">Empty</string>
    <string name="SleepCurve">Sleep Curve</string>
    <string name="hours">h</string>
    <string name="minutes">min</string>
    <string name="StartCalculating">Start Calculating</string>
    <string name="BodyMassIndexCurve">Body Mass Index Curve</string>
    <string name="YourWeightLight">\u3000Your weight it too light, we suggest you to pay more attention to your nutrition intake, especially iron, folic acid, vitamin B12, and other hematopoiesis substances.</string>
    <string name="YouHavePerfect">\u3000You have a perfect stature, please tell us how you keep it.</string>
    <string name="YouLookFat">\u3000You look a little fat, although not to the point of a real fatty, but you need to lose weight. In this period, coronary heart disease and stroke rates will rise, we suggest you take body fat testing.</string>
    <string name="YouAreOverweight">\u3000You are overweight, please start losing weight now. Take more exercises daily, it can prevent causes of disease. Meanwhile, you need to regulate your diet and keep a positive mind.</string>
    <string name="Period">Period</string>
    <string name="Date">Date</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Limosis">Before</string>
    <string name="PostCibum">After</string>
    <string name="Lunch">Lunch</string>
    <string name="AnteCibum">Before</string>
    <string name="Dinner">Dinner</string>
    <string name="BeforeSleep">Before Sleep</string>
    <string name="pleaseGlucose">Please Input Blood Glucose Value!</string>
    <string name="xuetangUnit">Unit：mmol/L</string>
    <string name="pleaseTemperature">Please Input Body Temperature Value!</string>
    <string name="Morning">Morning</string>
    <string name="Afternoon">Afternoon</string>
    <string name="Night">Night</string>
    <string name="tiwenUnit">Unit：℃</string>
    <string name="qingshuruzhengquetiwenzhi">Please enter the correct body temperature</string>
    <string name="gexingqianmingHint">Not Set</string>
    <string name="ProfilePhoto">Profile Photo</string>
    <string name="nicheng">Nickname</string>
    <string name="Gender">Gender</string>
    <string name="qingshurunicheng">Input Nickname</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Age">Age</string>
    <string name="Address">Address</string>
    <string name="Whatsup">What\'s up</string>
    <string name="qingshurudizhi">Input Address</string>
    <string name="paizhao">Take a Photo</string>
    <string name="congbendixiangce">Choose from Photos</string>
    <string name="jiahaoyou">Add</string>
    <string name="saoyisao">Scan</string>
    <string name="tongxunlu">Contacts</string>
    <string name="guojia">Country</string>
    <string name="qingshuruguojia">Input Country</string>
    <string name="qingshurulianxirennichenghuobeizhu">Enter a contact nickname or note</string>
    <string name="paihangbang">Ranking</string>
    <string name="yongyaotixing">Medication Reminder</string>
    <string name="yishengfuwu">Doctor Service</string>
    <string name="gerenziliao">Personal Information</string>
</resources>