<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homebgc"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <RelativeLayout
        android:id="@+id/rl_touxiang"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"

        android:paddingLeft="@dimen/mainright">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/ProfilePhoto"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/twosize" />

        <ImageView
            android:id="@+id/img_editor_touxiang"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:src="@mipmap/ic_launcher2" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/viewline" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_nicheng"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/nicheng"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/twosize" />


        <EditText
            android:id="@+id/et_editor_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/mainright"
            android:gravity="right|center_vertical"
            android:hint="@string/qingshurunicheng"
            android:layout_toRightOf="@+id/tv_nicheng"
            android:textColorHint="@color/hintcolor"
            android:background="@null"
            android:maxLength="15"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/twosize" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/viewline" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/Gender"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/twosize" />

        <RelativeLayout
            android:id="@+id/rl_sex_man"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/rl_sex_woman"
            android:layout_toStartOf="@+id/rl_sex_woman">

            <RelativeLayout
                android:id="@+id/rl_man"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_sex_man"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bjzl_xz_n2x"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/img_sex_man2"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bjzl_xz_s2x"
                    android:visibility="gone" />

            </RelativeLayout>


            <TextView
                android:id="@+id/sex_nan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/rl_man"
                android:gravity="center_vertical"
                android:text="@string/Male"
                android:textColor="@color/hintcolor"
                android:textSize="@dimen/twosize" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_sex_woman"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/mainright">

            <RelativeLayout
                android:id="@+id/rl_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_sex_woman"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bjzl_xz_n2x"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/img_sex_woman2"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bjzl_xz_s2x"

                    android:visibility="gone" />

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/rl_woman"
                android:gravity="center_vertical"
                android:text="@string/Female"
                android:textColor="@color/hintcolor"
                android:textSize="@dimen/twosize" />

        </RelativeLayout>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/viewline" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_nianling"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/Age"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/twosize" />


        <EditText
            android:id="@+id/et_editor_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/mainright"
            android:gravity="right|center_vertical"
            android:hint="0"
            android:maxLength="3"
            android:textColorHint="@color/hintcolor"
            android:background="@null"
            android:inputType="number"
            android:layout_toRightOf="@+id/tv_nianling"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/twosize" />


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/viewline" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/guojia"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/twosize" />


        <EditText
            android:id="@+id/et_editor_country"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/mainright"
            android:gravity="right|center_vertical"
            android:layout_toRightOf="@+id/tv_country"
            android:hint="@string/qingshuruguojia"
            android:textColorHint="@color/hintcolor"
            android:background="@null"
            android:maxLength="50"
            android:maxEms="10"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/twosize" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/viewline" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_jiatingzhuzhi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/Address"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/twosize" />


        <EditText
            android:id="@+id/et_editor_adress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/mainright"
            android:gravity="right|center_vertical"
            android:layout_toRightOf="@+id/tv_jiatingzhuzhi"
            android:hint="@string/qingshurudizhi"
            android:textColorHint="@color/hintcolor"
            android:background="@null"
            android:maxLength="50"
            android:maxEms="10"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/twosize" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/viewline" />

    <RelativeLayout
        android:id="@+id/rl_gxqm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/tv_singn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/Whatsup"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/twosize" />

        <EditText
            android:id="@+id/et_editor_gexinqianming"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="@dimen/mainright"
            android:background="@null"
            android:maxLength="50"
            android:gravity="top"
            android:hint="@string/gexingqianmingHint"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/hintcolor"
            android:textSize="@dimen/twosize"
            android:layout_toRightOf="@+id/tv_singn"
            />

    </RelativeLayout>

</LinearLayout>